# mp-autoresearch

./: .gitignore  PROGRAM.md  prepare.py  progress.py  pyproject.toml  sim.py  test.py  train.py  visualize_sim.py
