[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mp-autoresearch"
version = "0.1.0"
description = "Autonomous research loop for mass photometry particle classification"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "tifffile>=2023.1",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
torch = [
    "torch>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]
